--- a/Elzero_tasks/w3.css
+++ b/Elzero_tasks/w3.css
@@ -139,7 +139,7 @@ padding: 1px 10px;
 } */
 
 
-.main{
+/* .main{
     list-style: none;
    
     
@@ -173,4 +173,29 @@ ul li{
     background-color: white;
     padding: 5px;
     margin: 5px;
+} */
+
+table{
+    width: 700px;
+    border-spacing: 1px;
+}
+thead{
+    background-color: rgb(76, 74, 74);
+    color: white;
+
+}
+th{
+    padding: 10px;
+
+}
+tbody td{
+    background-color: gainsboro;
+    text-align: center;
+    padding: 10px ;
+    width: 20px;
+height: 20px
+}
+img{
+    width: 50px;
+    height: 50px;
 }
