--- a/Elzero_tasks/w4.css
+++ b/Elzero_tasks/w4.css
@@ -64,7 +64,7 @@ p::after{
     
 } */
 
-p{
+/* p{
     background-color: #EEE;
     width: 400px;
     padding: 15px;
@@ -84,4 +84,132 @@ padding: 15px;
     top: 0;
 
 
+} */
+
+/* div{
+    background-color: #EEE;
+counter-increment: cnt;
+width: 100px;
+height: 100px;
+border-radius: 50px;
+margin: 20px;
+float:left;
+
+position: relative;
+border: 3px black solid;
+box-shadow: 10px 10px rgb(0, 157, 255),-10px -10px rgb(184, 37, 86);
 }
+div::before{
+    content: "Element";
+    position:absolute;
+    top:40px;
+    left: 25px;
+}
+div::after{
+    content: counter(cnt);
+    background-color: black;
+    color: white;
+box-sizing: border-box;
+    height: 20px;
+    width: 20px;
+    
+    border-radius: 20px;
+    text-align: center;
+    
+    
+    position: absolute;
+    top: -9px;
+    left: 40px;
+    
+
+}
+.clear{
+    clear: both;
+}
+ */
+/*  body{
+    height: 100vh;
+ }
+
+ div{
+    width: 100px;
+    height: 100px;
+    position: relative;
+    top:50%;
+    left: 50%;
+    background-color: #EEE;
+    transform: translate(-50%, -50%);
+    border-radius: 10px 50px;
+    box-shadow: 0px 0px 13px 13px rgba(0, 0, 0, 0.332) inset;
+
+ } */
+  .parent{
+    position: relative;
+    left: 50%;
+    width: 550px;
+    transform:translate(-50%,0) ;
+   
+    
+    
+    
+    
+  }
+  .right{
+right: 0;
+  }
+  .left{
+
+  }
+  .left ,.right{
+background-color: #EEE;
+float: left;
+position: absolute;
+margin: 50px;
+
+  }
+  .parent::after{
+    content: "Or";
+    position: absolute;
+    background-color:rgb(0, 170, 255) ;
+    color: white;
+    width: 30px;
+    line-height: 30px;
+    text-align: center;
+    height: 30px;
+    border-radius: 50%;
+    top: 140px;
+    left: 47.5%;
+
+  }
+  .parent::before{
+    content: "";
+    position: absolute;
+    background-color:rgb(0, 170, 255) ;
+    
+    width: 2px;
+  
+
+    height: 220px;
+    z-index: -1;
+    top: 50px;
+    left: 50%;
+
+  }
+  .button{
+    background-color: rgb(0, 170, 255);
+    padding: 10px 50px;
+    text-align: center;
+    margin: 20px;
+    border-radius: 5px;
+    color: white;
+  }
+  .cont{
+    background-color: rgba(128, 128, 128, 0.34);
+    text-align: center;
+    line-height: 100px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 30px;
+
+  }
