--- a/Elzero_tasks/w7.css
+++ b/Elzero_tasks/w7.css
@@ -55,24 +55,33 @@ div::before{
     border-radius: 50%;
   display: block;
   position: absolute;
-  transform: translate(-10px ,-10px);
+ top: -10px;
+left: -9px;
   border:10px rgb(216, 29, 92) solid;
   border-left:10px white solid;
+  transition: .5s;
 
 }
 div::after{
     content: "";
-   width: 200px;
-    height: 200px;
+   width: 219px;
+    height: 219px;
     border-radius: 50%;
   display: block;
   position: absolute;
-  transform: translate(-10px ,-210px) scale(1.1,1.1);
+  top:-19px;
+  left:-19px;
  
   border:10px rgb(0, 162, 255) solid;
   border-right:10px white solid;
-  transition: .5s;
+  transition-delay: .5s;
+  transition-duration: .5s;
+  
 } 
-div:hover{
+div:hover::after{
    transform: rotate(360deg);
 }
+div:hover::before{
+  transform: rotate(360deg);
+}
+
